post request on vue.js

--- a/simple_mini_capstone/simple-vue-js/products.html
+++ b/simple_mini_capstone/simple-vue-js/products.html
@@ -14,10 +14,13 @@
       <hr>
       
       <button v-on:click ="allProducts">make web request</button>
+      <p>Todos:</p>
+    <button v-on:click="createProduct()">Make post request (add new product)</button>
+
       <div >
         <ol>
           <li v-for="product in products">
-            {{ product }}
+            {{ product.name }}
           </li>
         </ol>
       </div>
